--- a/content/pages/bio.mdx
+++ b/content/pages/bio.mdx
@@ -1,1 +1,9 @@
+---
+blocks:
+  - headline: Bio
+    type: left
+    _template: hero
+  - body: "¡Hola! \U0001F44B Soy Aníbal,\n\nNací en Salamanca\U0001F4CD, España \U0001F1EA\U0001F1F8, mi lugar de origen. Estudié el título de Licenciatura en Derecho en la\_[Universidad de Salamanca](https://www.usal.es/), además del CFGS en Desarrollo de Aplicaciones Multiplataforma en\_[Ilerna](https://ilerna.es/).\n\nActualmente estoy finalizando el Máster de Desarrollo de Aplicaciones Web en la\_[Universitat Oberta de Catalunya](https://www.uoc.edu/portal/en/index.html). Trabajo como Consultant | Arquitectura y Desarrollo de Soluciones Front para\_[Innusual](https://www.innusual.tech/). He trabajado para Inditex, Stradivarius, ioBuilders, Iberdrola, Indra, Axpe o Ntt Data, entre otras empresas.\n\nMe encanta el mundo del desarrollo web y la tecnología en general, pero tengo muchas otras pasiones, como la\_[fotografía analógica](https://anibalsantosgomez.com/ \"\"), el deporte o viajar.\n"
+    _template: content
+---
 
