--- a/content/pages/bio.mdx
+++ b/content/pages/bio.mdx
@@ -3,7 +3,7 @@ blocks:
   - headline: Bio
     type: left
     _template: hero
-  - body: "## ¡Hola! \U0001F44B Soy Aníbal,\n\nNací en Salamanca\U0001F4CD, España \U0001F1EA\U0001F1F8, mi lugar de origen.&#x20;\n\nEstudié el título de Licenciatura en Derecho en la\_[Universidad de Salamanca](https://www.usal.es/), además del CFGS en Desarrollo de Aplicaciones Multiplataforma en\_[Ilerna](https://ilerna.es/) y tengo el Máster de Desarrollo de Aplicaciones Web en la\_[Universitat Oberta de Catalunya](https://www.uoc.edu/portal/en/index.html).&#x20;\n\nTrabajo como Consultant | Arquitectura y Desarrollo de Soluciones Front para\_[Innusual](https://www.innusual.tech/). He trabajado para Inditex, Stradivarius, ioBuilders, Iberdrola, Indra, Axpe o Ntt Data, entre otras empresas.\n\nMe encanta el mundo del desarrollo web y la tecnología en general, pero tengo muchas otras pasiones, como la\_[fotografía analógica](https://anibalsantosgomez.com/ \"\"), el deporte o viajar.\n"
+  - body: "## ¡Hola! \U0001F44B Soy Aníbal,\n\nNací en Salamanca\U0001F4CD, España \U0001F1EA\U0001F1F8, mi lugar de origen.&#x20;\n\nEstudié el título de Licenciatura en Derecho en la\_[Universidad de Salamanca](https://www.usal.es/ \"\"), además del CFGS en Desarrollo de Aplicaciones Multiplataforma en\_[Ilerna](https://ilerna.es/ \"\") y tengo el Máster de Desarrollo de Aplicaciones Web en la\_[Universitat Oberta de Catalunya](https://www.uoc.edu/portal/en/index.html \"\").&#x20;\n\nTrabajo como Consultant | Arquitectura y Desarrollo de Soluciones Front para\_[Innusual](https://www.innusual.tech/ \"\"). He trabajado para Inditex, Stradivarius, ioBuilders, Iberdrola, Indra, Axpe o Ntt Data, entre otras empresas.\n\nMe encanta el mundo del desarrollo web y la tecnología en general, pero tengo muchas otras pasiones, como la\_[fotografía analógica](https://anibalsantosgomez.com/ \"\"), el deporte o viajar.\n\n<Github />\n\n## Algunos de mis skills\n\n<TechStack\n  group={[\n    {\n      label: \"Basics\",\n      tools: [\n        {\n          label: \"html5\",\n          bgColor: \"#E34F26\",\n          labelColor: \"#404252\",\n          logoColor: \"#fff\"\n        },\n        {\n          label: \"css3\",\n          bgColor: \"#1572B6\",\n          labelColor: \"#404252\",\n          logoColor: \"#fff\"\n        },\n        {\n          label: \"javascript\",\n          bgColor: \"#F5E90F\",\n          labelColor: \"#404252\",\n          logoColor: \"#fff\"\n        },\n        {\n          label: \"typescript\",\n          bgColor: \"#3178C6\",\n          labelColor: \"#404252\",\n          logoColor: \"#fff\"\n        }\n      ]\n    },\n    {\n      label: \"Frontend\",\n      tools: [\n        {\n          label: \"react\",\n          bgColor: \"#86D3F7\",\n          labelColor: \"#404252\",\n          logoColor: \"#fff\"\n        },\n        {\n          label: \"next.js\",\n          bgColor: \"#000\",\n          labelColor: \"#404252\",\n          logoColor: \"#fff\"\n        },\n        {\n          label: \"vue.js\",\n          bgColor: \"#9afcbc\",\n          labelColor: \"#404252\",\n          logoColor: \"#fff\"\n        },\n        {\n          label: \"nuxt.js\",\n          bgColor: \"#00c58e\",\n          labelColor: \"#404252\",\n          logoColor: \"#fff\"\n        },\n        {\n          label: \"svelte\",\n          bgColor: \"#ff3e00\",\n          labelColor: \"#404252\",\n          logoColor: \"#fff\"\n        }\n      ]\n    },\n    {\n      label: \"Styles\",\n      tools: [\n        {\n          label: \"tailwindcss\",\n          bgColor: \"#38b2ac\",\n          labelColor: \"#404252\",\n          logoColor: \"#fff\"\n        },\n        {\n          label: \"chakraui\",\n          bgColor: \"#319795\",\n          labelColor: \"#404252\",\n          logoColor: \"#fff\"\n        },\n        {\n          label: \"sass\",\n          bgColor: \"#cc6699\",\n          labelColor: \"#404252\",\n          logoColor: \"#fff\"\n        }\n      ]\n    },\n    {\n      label: \"Backend\",\n      tools: [\n        {\n          label: \"node.js\",\n          bgColor: \"#339933\",\n          labelColor: \"#404252\",\n          logoColor: \"#fff\"\n        },\n        {\n          label: \"express\",\n          bgColor: \"#000\",\n          labelColor: \"#404252\",\n          logoColor: \"#fff\"\n        },\n        {\n          label: \"axios\",\n          bgColor: \"#000\",\n          labelColor: \"#404252\",\n          logoColor: \"#fff\"\n        },\n        {\n          label: \"graphql\",\n          bgColor: \"#e10098\",\n          labelColor: \"#404252\",\n          logoColor: \"#fff\"\n        },\n        {\n          label: \"mongodb\",\n          bgColor: \"#47a248\",\n          labelColor: \"#404252\",\n          logoColor: \"#fff\"\n        },\n        {\n          label: \"prisma\",\n          bgColor: \"#2d3748\",\n          labelColor: \"#404252\",\n          logoColor: \"#fff\"\n        }\n      ]\n    },\n    {\n      label: \"Testing\",\n      tools: [\n        {\n          label: \"jest\",\n          bgColor: \"#c21325\",\n          labelColor: \"#404252\",\n          logoColor: \"#fff\"\n        },\n        {\n          label: \"storybook\",\n          bgColor: \"#ff4785\",\n          labelColor: \"#404252\",\n          logoColor: \"#fff\"\n        }\n      ]\n    },\n    {\n      label: \"Tooling\",\n      tools: [\n        {\n          label: \"Vite\",\n          bgColor: \"#646cff\",\n          labelColor: \"#404252\",\n          logoColor: \"#fff\"\n        },\n        {\n          label: \"rollup.js\",\n          bgColor: \"#ec4a3f\",\n          labelColor: \"#404252\",\n          logoColor: \"#fff\"\n        },\n        {\n          label: \"eslint\",\n          bgColor: \"#4b32c3\",\n          labelColor: \"#404252\",\n          logoColor: \"#fff\"\n        },\n        {\n          label: \"prettier\",\n          bgColor: \"#f7b93e\",\n          labelColor: \"#404252\",\n          logoColor: \"#fff\"\n        },\n        {\n          label: \"stylelint\",\n          bgColor: \"#000\",\n          labelColor: \"#404252\",\n          logoColor: \"#fff\"\n        }\n      ]\n    },\n    {\n      label: \"Platform\",\n      tools: [\n        {\n          label: \"git\",\n          bgColor: \"#fcaebc\",\n          labelColor: \"#404252\",\n          logoColor: \"#fff\"\n        },\n        {\n          label: \"Github\",\n          bgColor: \"#181717\",\n          labelColor: \"#404252\",\n          logoColor: \"#fff\"\n        },\n        {\n          label: \"Netlify\",\n          bgColor: \"#aee6fc\",\n          labelColor: \"#404252\",\n          logoColor: \"#fff\"\n        },\n        {\n          label: \"Vercel\",\n          bgColor: \"#000\",\n          labelColor: \"#404252\",\n          logoColor: \"#fff\"\n        }\n      ]\n    },\n    {\n      label: \"SO\",\n      tools: [\n        {\n          label: \"Linux\",\n          bgColor: \"#e6f7ff\",\n          labelColor: \"#404252\",\n          logoColor: \"#fff\"\n        },\n        {\n          label: \"macos\",\n          bgColor: \"#000\",\n          labelColor: \"#404252\",\n          logoColor: \"#fff\"\n        }\n      ]\n    },\n    {\n      label: \"Design\",\n      tools: [\n        {\n          label: \"Figma\",\n          bgColor: \"#f24e1e\",\n          labelColor: \"#404252\",\n          logoColor: \"#fff\"\n        }\n      ]\n    }\n  ]}\n/>\n\n\n\n"
     _template: content
 ---
 
